fix overflow test-04

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,6 +65,8 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .navigation-logo {
@@ -95,7 +97,7 @@ body {
   line-height: 24px;
   color: #000000;
   text-decoration: none;
-  margin: 20px 16px 0 16px;
+  margin: 0 16px 0 16px;
   padding-bottom: 20px;
 }
 
@@ -106,24 +108,30 @@ body {
 
 .navigation-link-active {
   border-bottom: solid 3px rgba(117, 98, 87, 1);
-  padding-bottom: 18px;
   pointer-events: none;
 }
 
 .navigation-user {
   padding: 0;
   margin: 0;
+  max-width: 300px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   flex-wrap: wrap;
-  margin-left: 281px;
-
+  margin-left: 285px;
+  gap: 16px;
 }
 
 .navigation-user-item {
   position: relative;
   list-style-type: none;
+}
+
+.navigation-user .navigation-link {
+  margin-top: 20px;
+  margin-bottom: 16px;
+  padding: 0;
 }
 
 .likes-ammount {
@@ -141,8 +149,9 @@ body {
   left: 25px;
 }
 
-.navigation-button {
+.navigation-user .navigation-button {
   color: #ffffff;
+  text-decoration: none;
   background-color: #756157;
   text-transform: uppercase;
   text-align: center;
@@ -352,6 +361,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .reasons-item {
@@ -709,6 +719,7 @@ body {
   margin-bottom: 32px;
 }
 
+
 .catalog-filter-item {
   line-height: 23px;
   color: #ffffff;
@@ -765,6 +776,10 @@ body {
   display: -ms-flexbox;
   display: flex;
   gap: 2px;
+}
+
+.controls input {
+    flex-shrink: 0;
 }
 
 .controls-input {
